fix: 🔍️ Ensure search URL is localised

--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -13,7 +13,7 @@
         <form action="{% url "search" %}" method="get" class="hero-search__form">
             <label for="id_query" class="hero-search__label">Sagi</label>
             <div class="hero-search__control">
-                <input type="text" id="id_query" name="query" class="hero-search__input">
+                <input type="text" id="id_query" name="iskatis" class="hero-search__input">
                 <button type="submit" aria-label="Sagi" class="hero-search__button">
                     <i class="bx bx-search"></i>
                 </button>
