--- a/kmstca/static/css/main.css
+++ b/kmstca/static/css/main.css
@@ -73,6 +73,10 @@ main {
   padding-block: 1.2rem;
 }
 
+header {
+  row-gap: 1.4rem;
+}
+
 main {
   padding-block-end: 4.8rem;
 }
@@ -93,6 +97,14 @@ main {
 }
 
 .brand {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  column-gap: 1.2rem;
+  user-select: none;
+}
+
+.brand__link {
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
@@ -119,11 +131,25 @@ hr {
   border-color: #ddd;
 }
 
+.header-nav {
+  width: 100%;
+}
+
+@media (min-width: 768px) {
+  .header-nav {
+    width: fit-content;
+  }
+}
+
 .header-nav ul {
   list-style: none;
   display: flex;
   flex-flow: row wrap;
   align-items: center;
+}
+
+.header-nav ul li:first-child {
+  margin-inline-start: auto;
 }
 
 .header-nav ul li a {
@@ -208,11 +234,20 @@ hr {
 }
 
 .hero-title {
-  display: grid;
-  grid-template-columns: 33% 1fr;
-  align-items: center;
-  column-gap: 1.6rem;
-  font-size: 1.8rem;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  row-gap: 1.4rem;
+  padding-inline: var(--page-gutter);
+}
+
+@media (min-width: 768px) {
+  .hero-title {
+    display: grid;
+    grid-template-columns: 33% 1fr;
+    column-gap: 1.6rem;
+    align-items: center;
+  }
 }
 
 .hero-title--primary {
@@ -250,9 +285,15 @@ hr {
 }
 
 .hero-title__icon {
-  font-size: 6.8rem;
+  font-size: 4.8rem;
   width: fit-content;
-  margin-inline-start: auto;
+}
+
+@media (min-width: 768px) {
+  .hero-title__icon {
+    font-size: 6.8rem;
+    margin-inline-start: auto;
+  }
 }
 
 .hero-title__icon i {
@@ -323,14 +364,23 @@ hr {
 }
 
 .security-banner__body {
-  display: grid;
-  grid-template-columns: 55% 1fr;
-  column-gap: 3rem;
+  display: flex;
+  flex-flow: column nowrap;
+  row-gap: 1.8rem;
   width: 100%;
-  padding-block: 4.8rem;
+  padding-block: 2.8rem;
   max-width: var(--page-width);
   padding-inline: var(--page-gutter);
   margin-inline: auto;
+}
+
+@media(min-width: 768px) {
+  .security-banner__body {
+    padding-block: 4.8rem;
+    display: grid;
+    grid-template-columns: 55% 1fr;
+    column-gap: 3rem;
+  }
 }
 
 .security-banner__body h2 {
@@ -360,11 +410,17 @@ hr {
 }
 
 .hero-search__heading {
-  font-size: 4.8rem;
+  font-size: 3.4rem;
   font-weight: bold;
-  max-width: 75%;
   text-wrap: pretty;
   margin-block-end: 1.6rem;
+}
+
+@media(min-width: 768px) {
+  .hero-search__heading {
+    font-size: 4.8rem;
+    max-width: 75%;
+  }
 }
 
 .search-form {
@@ -383,6 +439,7 @@ hr {
   border: 1px solid #ccc;
   padding-inline: 1.6rem;
   font-family: var(--font-stack);
+  width: 100%;
 }
 
 .search-form__input {
@@ -475,10 +532,16 @@ hr {
 
 .cards {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   column-gap: 1.2rem;
   row-gap: 1rem;
   margin-block-end: 2.8rem;
+}
+
+@media (min-width: 768px) {
+  .cards {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
 
 .card {
@@ -527,10 +590,25 @@ hr {
 }
 
 .article-stack {
-  display: grid;
-  grid-template-columns: 33% 33% 34%;
-  column-gap: 2.4rem;
+  display: flex;
+  flex-flow: column nowrap;
   row-gap: 2rem;
+}
+
+@media (min-width: 768px) {
+  .article-stack {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 2.2rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .article-stack {
+    display: grid;
+    grid-template-columns: 33% 33% 34%;
+    column-gap: 2.4rem;
+  }
 }
 
 .article-stack :first-child {
@@ -603,10 +681,16 @@ hr {
 }
 
 .page-title {
-  font-size: 3.8rem;
+  font-size: 3rem;
   font-weight: bold;
   text-wrap: pretty;
   margin-block-end: 1.6rem;
+}
+
+@media (min-width: 768px) {
+  .page-title {
+    font-size: 3.8rem;
+  }
 }
 
 .content p,
@@ -632,10 +716,15 @@ hr {
 
 .index-category__list {
   margin-block-start: 1.6rem;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  column-gap: 2.4rem;
-  align-items: flex-start;
+}
+
+@media (min-width: 768px) {
+  .index-category__list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 2.4rem;
+    align-items: flex-start;
+  }
 }
 
 .index-category__item {
