--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -9,7 +9,7 @@
 
 {% block pre_content %}
     <div class="hero-search">
-        <h2 class="hero-search__heading">Ceme uelé en uelmannam mediám ad kmstaimares margatiám geldamqe</h2>
+        <h2 class="hero-search__heading">{{ page.heading }}</h2>
         <form action="{% url "search" %}" method="get" class="hero-search__form">
             <label for="id_query" class="hero-search__label">Sagi</label>
             <div class="hero-search__control">
