--- a/infodesk/templates/infodesk/category_page.html
+++ b/infodesk/templates/infodesk/category_page.html
@@ -17,19 +17,19 @@
 
 {% block content %}
     {{ pre_body|safe }}
-    {% regroup children by category as categories %}
-    {% for category in categories %}
+    {% regroup children by subcategory as subcategories %}
+    {% for subcategory in subcategories %}
         <div class="index-category">
             <h3 class="index-category__heading">
-                {{ category.grouper|default_if_none:"Aliá" }}
+                {{ subcategory.grouper|default_if_none:"Aliá" }}
             </h3>
-            {% if category.grouper.tagline %}
+            {% if subcategory.grouper.tagline %}
                 <div class="index-category__tagline">
-                    {{ category.grouper.tagline|richtext }}
+                    {{ subcategory.grouper.tagline|richtext }}
                 </div>
             {% endif %}
             <ul class="index-category__list">
-                {% for child in category.list %}
+                {% for child in subcategory.list %}
                     <li class="index-category__item">
                         <i class="bx bx-arrow-right-circle index-category__icon"></i>
                         <a class="index-category__link" href="{% pageurl child %}">
