fix: ✍️ Fix grammar in security banner

--- a/kmstca/templates/base.html
+++ b/kmstca/templates/base.html
@@ -44,7 +44,7 @@
                     </div>
                     <div class="security-banner__section">
                         <h2>Tnká esti kí saitám</h2>
-                        <p>Arniti https:// Isuám iugantm Ie kam uáranti saitami Isuámqe gebantm tnké margatiám.</p>
+                        <p>Arniti https:// Isuám iugantm Ie kam uáranti saitami, ar Isuám gebantm tnké margatiám.</p>
                     </div>
                 </div>
             </details>
