fix: 🔗 Fix base URL link to site in non-default site pages

--- a/kmstca/templates/base.html
+++ b/kmstca/templates/base.html
@@ -63,7 +63,7 @@
                     {% if current_site.is_default_site %}
                         <li><a href="#">Stautá <i class="bx bx-chevron-down"></i></a></li>
                     {% else %}
-                        <li><a href="#"><i class="bx bx-arrow-left"></i> kmst<span class="accent">.</span>ca</a></li>
+                        <li><a href="https://kmst.ca"><i class="bx bx-arrow-left"></i> kmst<span class="accent">.</span>ca</a></li>
                     {% endif %}
                     {% block nav_search %}
                     <li><a href="{% url "search" %}" aria-label="Sagitis"><i class="bx bx-search"></i></a></li>
