feat: Use classical-style orthography

--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -36,7 +36,7 @@
         {% endfor %}
     </div>
 
-    <h2 class="heading">Neuiases ueittí</h2>
+    <h2 class="heading">Neujases weittī</h2>
     <div class="article-stack">
         {% for article in articles %}
             <a href="{% pageurl article %}" class="article-stack-item">
