--- a/infodesk/templates/infodesk/category_page.html
+++ b/infodesk/templates/infodesk/category_page.html
@@ -21,7 +21,7 @@
     {% for subcategory in subcategories %}
         <div class="index-category">
             <h3 class="index-category__heading">
-                {{ subcategory.grouper|default_if_none:"Aliá" }}
+                {{ subcategory.grouper|default_if_none:"Aljā" }}
             </h3>
             {% if subcategory.grouper.tagline %}
                 <div class="index-category__tagline">
